# Temporal-ML-pipeline-demo

./: MLPipelineWorkflow.py  README.md  activities.py  client.py  dataobjects.py  pyproject.toml  worker.py
demodata/data/: churn.csv
