[tool.poetry]
name = "data-pipeline-demo"
version = "0.1.0"
description = ""
authors = ["Joshua Smith <joshmsmith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.7.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.22.0"

[tool.poetry.group.dev.dependencies]
temporalio = "^1.11.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
